# zorcube

./: .env.example  README.md  docker-compose.yml  drizzle.config.ts  index.html  package.json  vite.config.ts
.github/workflows/: test.yml
api/: .gitignore  Cargo.toml
api/migrations/: 20260529085347_init.down.sql  20260529085347_init.up.sql
api/src/: main.rs
api/src/routes/: auth.rs
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: App.module.css  App.tsx  index.css  schema.ts
src/app/: globals.css  globals.scss  layout.tsx  page.module.scss  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/login/: page.module.css  page.tsx
src/features/scramble/: Scramble.tsx  index.ts
src/features/scramble/lib/: generateScramble.ts  scramble.ts
src/features/scramble/ui/: Scramble.module.css  Scramble.module.scss  Scramble.tsx
src/features/timer/: Timer.tsx
src/features/timer/ui/: Timer.module.css  Timer.module.scss  Timer.tsx
src/shared/ui/: Button.module.scss  Button.tsx  Tooltip.module.scss  Tooltip.tsx  UserNav.module.scss  UserNav.tsx
web/: index.html  package.json
web/src/: index.css  main.tsx
web/src/features/scramble/lib/: scramble.test.ts  scramble.ts
web/src/features/scramble/ui/: Scramble.tsx
web/src/features/timer/ui/: Timer.module.css  Timer.tsx
