[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5"
serde = "1"
dotenvy = "0.15.7"
