[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
oauth2 = "5"
serde = "1"
dotenvy = "0.15.7"
